fix(cta): resolve contrast issue with button

--- a/template/components/CTA/CTA.css
+++ b/template/components/CTA/CTA.css
@@ -81,7 +81,7 @@
 
 /* TODO: why do we define an outline on focus here, shouldn't this even already been defined by the system itself ? */
 .cta .db-button[data-variant='outlined']:not([data-disable-focus='true']):focus-visible {
-	outline: var(--db-border-width-2xs) solid var(--db-neutral-on-bg-basic-emphasis-100-default);
+	outline: var(--db-border-width-2xs) solid var(--db-brand-on-origin-default);
 	outline-offset: var(--db-spacing-fixed-3xs);
 }
 
